frontend/src/components/MovieCard/movieCard.scss
@use "../../sassStyles/variables";

$borderRadius: 20px;
$padding: 20px;
$background: rgb(14, 13, 13);

.card {
    max-width: 90vw;
    width: variables.$movieCardWidth;
    position: relative;
    border-radius: $borderRadius;
    background: $background;
    transition-duration: 0.5s;
    margin-bottom: 20px;

    .card__imageWrapper {
        position: relative;
        width: 100%;
        height: 400px;
    }

    .card__fade {
        position: absolute;
        bottom: 0px;
        width: 100%;
        height: 200px;
        background: linear-gradient(to bottom, rgba(14,13,13,0) 0%, rgba(14,13,13,0.79) 64%, rgba(14,13,13,1) 100%);
    }

    .card__image {
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: top;
        border-radius: $borderRadius $borderRadius 0px 0px;
    }

    .card__title {
        position: absolute;
        bottom: 5px;
        margin: 0px $padding;
    }

    .card__bottom {
        height: 150px;
        min-height: fit-content;
        padding: 15px 20px;
    }

    .card__overview {
        text-overflow: ellipsis;
        display: -webkit-box;
        -webkit-line-clamp: 5;
        -webkit-box-orient: vertical;  
        overflow: hidden;
    }

    .card__genres {
        max-width: 300px;
    }

    .card__details {
        display: flex;
        justify-content: space-between;
    }

    .card__genre:not(:last-child)::after {
        content: '|';
        padding: 5px;
    }

    &:hover {
        transform: translateY(-1%);
        cursor: pointer;
    }
}

